--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "homepage": "https://github.com/rajawijaya/openAiApi#readme",
   "dependencies": {
-    "openai": "^3.1.0"
+    "openai": "^3.1.0",
+    "qrcode-terminal": "^0.12.0",
+    "whatsapp-web.js": "^1.18.4"
   }
 }
